Fixed alignment issues
Needed to close first col class in details class for the flex to work correctly

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-{
+*{
     margin: 0;
     padding: 0;
     font-family: 'Poppins', sans-serif;
@@ -68,11 +68,26 @@ body {
     padding: 0 20px;
     margin-top: 50px;
 }
+.col {
+    display: flex;
+    align-items: center;
+    text-align: left;
+}
+
+/*
+.details{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 0 20px;
+    margin-top: 50px;
+}
 .col{
     display: flex;
     align-items: center;
     text-align: left;
 }
+*/
 .col img{
     width: 40px;
     margin-right: 10px;
